--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -140,3 +140,12 @@ button {
 
     text-transform: uppercase;
 }
+
+/* .iziToast-body {
+    border-bottom: 2px solid #ffbebe;
+    border-radius: 4px;
+    padding: 20px;
+    width: 302px;
+    height: 64px;
+    text-align: center;
+} */
