--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -42,7 +42,7 @@ button {
     margin: 0;
 }
 
-/* ========================================= */
+/* ===================Standard Style Reset====================== */
 
 .input {
     border-radius: 4px;
